samples/_failures_safe/1761355860_c10349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_734d32c7.c: In function ‘main’:
./samples/SAFE/__tmp_734d32c7.c:162:5: error: expected expression at end of input
  162 |     if (decompressed_heap.size == input_len &&
      |     ^~
./samples/SAFE/__tmp_734d32c7.c:162:5: error: expected declaration or statement at end of input
